# PaperMatch_Analysis

./: .gitignore  README.md  category_weight.py  download_embeddings.py  mrl.py  pca_yearly.py  plot_mrl.ipynb  plot_pca.ipynb  plot_umap.ipynb  plot_umap_all.py  pyproject.toml  tokenization_limit.py  umap_all.py  umap_yearly.py
bluuebunny/arxiv_abstract_embedding_mxbai_large_v1_milvus/mrl/: 1991.parquet  1992.parquet  1993.parquet  1994.parquet  1995.parquet  1996.parquet  1997.parquet  1998.parquet  1999.parquet  2000.parquet  2001.parquet  2002.parquet  2003.parquet  2004.parquet  2005.parquet  2006.parquet  2007.parquet  2008.parquet  2009.parquet  2010.parquet  2011.parquet  2012.parquet  2013.parquet  2014.parquet  2015.parquet  2016.parquet  2017.parquet  2018.parquet  2019.parquet  2020.parquet  2021.parquet  2022.parquet  2023.parquet  2024.parquet  2025.parquet
bluuebunny/arxiv_abstract_embedding_mxbai_large_v1_milvus/pca/: 1991.parquet  1992.parquet  1993.parquet  1994.parquet  1995.parquet  1996.parquet  1997.parquet  1998.parquet  1999.parquet  2000.parquet  2001.parquet  2002.parquet  2003.parquet  2004.parquet  2005.parquet  2006.parquet  2007.parquet  2008.parquet  2009.parquet  2010.parquet  2011.parquet  2012.parquet  2013.parquet  2014.parquet  2015.parquet  2016.parquet  2017.parquet  2018.parquet  2019.parquet  2020.parquet  2021.parquet  2022.parquet  2023.parquet  2024.parquet  2025.parquet
bluuebunny/arxiv_abstract_embedding_mxbai_large_v1_milvus_binary/mrl/: 1991.parquet  1992.parquet  1993.parquet  1994.parquet  1995.parquet  1996.parquet  (+29 more)
(+106 files in other folders)
