[project]
name = "papermatch-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=0.32.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.7",
]
