[project]
name = "papermatch-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.32.4",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.12",
    "matplotlib>=3.9.4",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "seaborn>=0.13.2",
    "transformers>=4.52.4",
    "umap-learn>=0.5.7",
]
